grafana/overlays/moc/smaug/blackbox-exporter/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blackbox-exporter
    prometheus.io/scrape: "true"
    prometheus.io/joblabel: "blackbox-metrics"
  name: blackbox-exporter
spec:
  ports:
  - name: 9115-tcp
    port: 9115
    protocol: TCP
    targetPort: 9115
  selector:
    deployment: blackbox-exporter
