grafana/overlays/moc/smaug/blackbox-exporter/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: blackbox-exporter
spec:
  port:
    targetPort: 9115-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: blackbox-exporter
